home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: home-assistant-ingress
  namespace: home-assistant
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls: 
    - hosts:
      - https://home-assistant.local
      secretName: home-assistant-secret-tls
  rules:
    - host: https://home-assistant.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123
